--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,10 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <div class="min-h-screen bg-white">
+  <body class="bg-gray-100">
+    <div class="min-h-screen">
       <%= render "layouts/partials/navbar" %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <%= render "layouts/partials/flash_message" %>
       <%= yield %>
     </div>
   </body>
