--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
+  <div id="error_explanation rounded-md bg-red-50 p-4 text-red-50">
     <h2>
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
