--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div>
-          <label for="user_password" class="block text-sm font-medium text-gray-700">
+          <label for="user_password_confirmation" class="block text-sm font-medium text-gray-700">
             Password Confirmation
           </label>
           <div class="mt-1">
